1.Fixed: Large Gaps in Library Preview Pane on Desktop Client at 1920x1080 Resolution with 125% Scale. 2. Fixed: SearchTextField in Icons Page Should Not Auto-Focus. 3. Fixed: Incorrect Button Layout on Welcome Page at 1920x1080 Resolution with 125% Scale. 4. Fixed: Unable to Navigate to Page Upon Clicking Link Button or Image in SimpleTileView.

--- a/components/src/main/resources/com/dlsc/jfxcentral2/theme.css
+++ b/components/src/main/resources/com/dlsc/jfxcentral2/theme.css
@@ -1415,7 +1415,7 @@
     -fx-pref-height: 225px;
     -fx-max-width: 303px;
     -fx-max-height: 225px;
-    -fx-hgap: 10px;
+    -fx-hgap: 8px;
     -fx-vgap: 15px;
 }
 
@@ -5728,7 +5728,7 @@
 }
 
 .library-preview-box:lg .previews-pane {
-    -fx-hgap: 12px;
+    -fx-hgap: 11px;
     -fx-vgap: 10px;
     -fx-padding: 0 0 0 5px;
 }
